--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+    "AllowedHosts": "*",
+    "ConnectionStrings": {
+        "DefaultConnection": "Server=LAPTOP-D0R9A6T6\\SQLEXPRESS;Database=Bulky;Trusted_Connection=True;TrustServerCertificate=True "
+    }
+
+
 }
